logs/dag_id=get_todays_gamesv4/run_id=manual__2023-04-03T01:56:54.981930+00:00/task_id=create_sql_table_task/attempt=1.log
[2023-04-03T01:57:00.478+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: get_todays_gamesv4.create_sql_table_task manual__2023-04-03T01:56:54.981930+00:00 [queued]>
[2023-04-03T01:57:00.488+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: get_todays_gamesv4.create_sql_table_task manual__2023-04-03T01:56:54.981930+00:00 [queued]>
[2023-04-03T01:57:00.489+0000] {taskinstance.py:1282} INFO - 
--------------------------------------------------------------------------------
[2023-04-03T01:57:00.489+0000] {taskinstance.py:1283} INFO - Starting attempt 1 of 1
[2023-04-03T01:57:00.489+0000] {taskinstance.py:1284} INFO - 
--------------------------------------------------------------------------------
[2023-04-03T01:57:00.505+0000] {taskinstance.py:1303} INFO - Executing <Task(PostgresOperator): create_sql_table_task> on 2023-04-03 01:56:54.981930+00:00
[2023-04-03T01:57:00.511+0000] {standard_task_runner.py:55} INFO - Started process 438 to run task
[2023-04-03T01:57:00.515+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'get_todays_gamesv4', 'create_sql_table_task', 'manual__2023-04-03T01:56:54.981930+00:00', '--job-id', '61', '--raw', '--subdir', 'DAGS_FOLDER/todays_games.py', '--cfg-path', '/tmp/tmpb0gs4t2a']
[2023-04-03T01:57:00.515+0000] {standard_task_runner.py:83} INFO - Job 61: Subtask create_sql_table_task
[2023-04-03T01:57:00.583+0000] {task_command.py:388} INFO - Running <TaskInstance: get_todays_gamesv4.create_sql_table_task manual__2023-04-03T01:56:54.981930+00:00 [running]> on host bb4d827b1601
[2023-04-03T01:57:00.665+0000] {taskinstance.py:1511} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=get_todays_gamesv4
AIRFLOW_CTX_TASK_ID=create_sql_table_task
AIRFLOW_CTX_EXECUTION_DATE=2023-04-03T01:56:54.981930+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-04-03T01:56:54.981930+00:00
[2023-04-03T01:57:00.666+0000] {sql.py:254} INFO - Executing: 
        create or replace table games (
            game_datetime DATETIME,
            away_name VARCHAR(25),
            home_name VARCHAR(25),
            home_probable_pitcher VARCHAR(25),
            away_probable_pitcher VARCHAR(25),
            away_score INT,
            home_score INT,
            current_inning INT,
            inning_state VARCHAR(9),
            venue_name VARCHAR(25),
            series_status VARCHAR(15),
            summary VARCHAR(40)
        );
    
[2023-04-03T01:57:00.675+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-04-03T01:57:00.996+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-04-03T01:57:01.001+0000] {sql.py:375} INFO - Running statement: 
        create or replace table games (
            game_datetime DATETIME,
            away_name VARCHAR(25),
            home_name VARCHAR(25),
            home_probable_pitcher VARCHAR(25),
            away_probable_pitcher VARCHAR(25),
            away_score INT,
            home_score INT,
            current_inning INT,
            inning_state VARCHAR(9),
            venue_name VARCHAR(25),
            series_status VARCHAR(15),
            summary VARCHAR(40)
        );
    , parameters: None
[2023-04-03T01:57:01.002+0000] {taskinstance.py:1775} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "table"
LINE 2:         create or replace table games (
                                  ^

[2023-04-03T01:57:01.014+0000] {taskinstance.py:1326} INFO - Marking task as FAILED. dag_id=get_todays_gamesv4, task_id=create_sql_table_task, execution_date=20230403T015654, start_date=20230403T015700, end_date=20230403T015701
[2023-04-03T01:57:01.027+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 61 for task create_sql_table_task (syntax error at or near "table"
LINE 2:         create or replace table games (
                                  ^
; 438)
[2023-04-03T01:57:01.049+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-04-03T01:57:01.072+0000] {taskinstance.py:2585} INFO - 0 downstream tasks scheduled from follow-on schedule check
